--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "nuxt": "^3.7.4",
+    "sass": "^1.69.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@nuxtseo/module": "2.0.0-beta.15"
+    "@nuxtseo/module": "2.0.0-beta.34"
   }
 }
